--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="author"
+      content="MaestroDev007" />
+    <meta
+      name="description"
+      content="Official Website Of Rodinea Foods" />
+    <link
+      rel="icon"
+      type="image/jpg"
+      href="/logo.jpg" />
+    <title>Healthy Foods || Good Life || Shop Rodinea Today</title>
   </head>
-  <body>
+  <body class="bg-white font-poppins">
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script
+      type="module"
+      src="/src/main.jsx"></script>
   </body>
 </html>
